update stock usb connection

--- a/klipper_config/extruder.cfg
+++ b/klipper_config/extruder.cfg
@@ -3,10 +3,10 @@ step_pin: PD6
 dir_pin: !PD3
 enable_pin: !PB3
 microsteps: 16
-rotation_distance: 4.877 #for oxy
-#rotation_distance: 15.632 #for stock
+#rotation_distance: 4.877 #for oxy
+rotation_distance: 15.632 #for stock
 max_extrude_only_distance: 1400.0
-nozzle_diameter: 0.400
+nozzle_diameter: 0.600
 filament_diameter: 1.750
 heater_pin: PE5
 smooth_time: 2
