--- a/klipper_config/macros.cfg
+++ b/klipper_config/macros.cfg
@@ -85,7 +85,7 @@ gcode:
 gcode:
   M18
 
-[gcode_macro M81]
+[gcode_macro M81_Power_Off]
 gcode:
   SET_PIN PIN=POWER_OFF VALUE=1
 
@@ -94,15 +94,11 @@ pin: !PE9
 shutdown_value: 1
 
 
-[gcode_shell_command backup_cfg]
-command: sh /home/vitaliy/klipper_config/autocommit.sh
-timeout: 30.0
-verbose: True
+#[gcode_shell_command backup_cfg]
+#command: sh /home/vitaliy/klipper_config/autocommit.sh
+#timeout: 30.0
+#verbose: True
 
 [gcode_macro BACKUP_CFG]
 gcode:
     RUN_SHELL_COMMAND CMD=backup_cfg
-
-
-
-
