--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -1,4 +1,3 @@
-
 #stock  flying bear ghost 6
 
 [printer]
@@ -11,22 +10,22 @@ max_z_velocity: 25
 max_z_accel: 100
 
 [mcu]
-serial: /dev/ttyS3
+#serial: /dev/ttyS3
+serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_460050001151313339393731-if00
 restart_method: command
-#serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_000000000000000000000000-if00
 
 [temperature_sensor orange_pi]
 sensor_type: temperature_host
-min_temp: 10
+min_temp: 1
 max_temp: 100
 
 [temperature_sensor mcu_temp]
 sensor_type: temperature_mcu
-min_temp: 0
+min_temp: 1
 max_temp: 100
 
 [virtual_sdcard]
-path: ~/gcode_files
+path: ~/printer_data/gcodes
 
 ########## input shaper Part uncomment then need #########
 
@@ -46,7 +45,7 @@ shaper_type_y: mzv
 
 [display_status]
 
-# [include mainsail.cfg]
+#[include mainsail.cfg]
 [include stepper.cfg]
 [include extruder.cfg]
 [include tmc.cfg]
