--- a/klipper_config/macros.cfg
+++ b/klipper_config/macros.cfg
@@ -2,6 +2,16 @@
 gcode:
     {action_call_remote_method("shutdown_machine")}
 
+[gcode_macro CLEAN_NOZZLE]
+gcode:
+   G1 X1 Y20 F10000
+   G1 X1 Y130 F10000
+   G1 X1 Y70 F10000
+   G1 X1 Y130 F10000
+   G1 X1 Y70 F10000
+   G1 X1 Y130 F10000
+   G1 X1 Y20 F10000
+
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
 gcode:
@@ -26,7 +36,7 @@ gcode:
     G1 E-{e} F300
     G1 Z{z_safe}
     G90
-    G1 X{x} Y{y} F4000
+    G1 X{x} Y{y} F6000
 
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
