--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -28,12 +28,17 @@ max_temp: 100
 path: ~/printer_data/gcodes
 
 ########## input shaper Part uncomment then need #########
+#[input_shaper]
+#shaper_freq_x: 39.4
+#shaper_type_x: mzv
+#shaper_freq_y: 39.4
+#shaper_type_y: mzv
 
 [input_shaper]
-shaper_freq_x: 39.4
-shaper_type_x: mzv
-shaper_freq_y: 39.4
-shaper_type_y: mzv
+shaper_type_x = ei
+shaper_freq_x = 55
+shaper_type_y = 2hump_ei
+shaper_freq_y = 55
 
 #[idle_timeout]
 #timeout: 1200
@@ -45,10 +50,10 @@ shaper_type_y: mzv
 
 [display_status]
 
-#[include mainsail.cfg]
+[include mainsail.cfg]
 [include stepper.cfg]
 [include extruder.cfg]
-[include tmc.cfg]
+# [include tmc.cfg]
 [include bed.cfg]
 [include fan.cfg]
 [include macros.cfg]
