--- a/klipper_config/stepper.cfg
+++ b/klipper_config/stepper.cfg
@@ -3,22 +3,28 @@ step_pin: PE3
 dir_pin: !PE2
 enable_pin: !PE4
 microsteps: 16
-rotation_distance: 40
+rotation_distance: 20
 endstop_pin: !PA15
 position_endstop: 1
 position_max: 255
 homing_speed: 60
+
+position_min: -1.2
+position_endstop: -1.2
 
 [stepper_y]
 step_pin: PE0
 dir_pin: !PB9
 enable_pin: !PE1
 microsteps: 16
-rotation_distance: 40
+rotation_distance: 20
 endstop_pin: !PD2
 position_endstop: 1
 position_max: 220
 homing_speed: 60
+
+position_min: -4.3
+position_endstop: -4.3
 
 [stepper_z]
 step_pin: PB5
