--- a/klipper_config/fan.cfg
+++ b/klipper_config/fan.cfg
@@ -16,9 +16,9 @@ pin: PB0
 #cycle_time: 0.05
 kick_start_time: 0.5
 
-[controller_fan driver_fan]
-pin: PA2
-fan_speed: 0.8
-idle_timeout: 30
-idle_speed: 0.8
-stepper: stepper_x,stepper_y
+# [controller_fan driver_fan]
+# pin: PA2
+# fan_speed: 0.8
+# idle_timeout: 30
+# idle_speed: 0.8
+# stepper: stepper_x,stepper_y
