--- a/klipper_config/extruder.cfg
+++ b/klipper_config/extruder.cfg
@@ -4,7 +4,7 @@ dir_pin: PD3
 enable_pin: !PB3
 microsteps: 16
 #rotation_distance: 4.877 #for oxy
-rotation_distance: 15.632 #for stock
+rotation_distance: 7.742 #my stock
 max_extrude_only_distance: 1400.0
 nozzle_diameter: 0.600
 filament_diameter: 1.750
@@ -13,7 +13,7 @@ smooth_time: 2
 max_power: 1.0
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC1
-min_temp: 0
+min_temp: 2
 max_temp: 260
 pressure_advance: 0.055
 pressure_advance_smooth_time = 0.040
