--- a/klipper_config/macros.cfg
+++ b/klipper_config/macros.cfg
@@ -2,15 +2,15 @@
 gcode:
     {action_call_remote_method("shutdown_machine")}
 
-[gcode_macro CLEAN_NOZZLE]
-gcode:
-   G1 X1 Y20 F10000
-   G1 X1 Y130 F10000
-   G1 X1 Y70 F10000
-   G1 X1 Y130 F10000
-   G1 X1 Y70 F10000
-   G1 X1 Y130 F10000
-   G1 X1 Y20 F10000
+# [gcode_macro CLEAN_NOZZLE]
+# gcode:
+#    G1 X1 Y20 F10000
+#    G1 X1 Y130 F10000
+#    G1 X1 Y70 F10000
+#    G1 X1 Y130 F10000
+#    G1 X1 Y70 F10000
+#    G1 X1 Y130 F10000
+#    G1 X1 Y20 F10000
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
@@ -47,7 +47,7 @@ gcode:
     G1 E{e} F300
     G90
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
-    BASE_RESUME  
+    BASE_RESUME
 
 [gcode_macro CANCEL_PRINT]
 rename_existing: BASE_CANCEL_PRINT
@@ -58,7 +58,7 @@ gcode:
     BASE_CANCEL_PRINT
     M106 S0
     G91
-    G1 Z5 
+    G1 Z5
     G90
     G1 X5 Y105
     M84
@@ -69,46 +69,4 @@ gcode:
   PID_CALIBRATE HEATER=extruder TARGET={T}
 
 [gcode_macro PID_B]
-gcode:
-  {% set T = params.T|default(80) %}
-  PID_CALIBRATE HEATER=heater_bed TARGET={T}
 
-[gcode_macro END_PRINT]
-gcode:
-    M140 S0
-    M104 S0
-    G91
-    G1 Z10 F3000
-    G90
-    G1  E-3 F300
-    G1 X10 Y190 F3000
-    M84
-    M106 S200
-    SET_FAN_SPEED FAN=Camera_Fan SPEED=1
-    G4 P300000
-    M106 S0
-    SET_FAN_SPEED FAN=Camera_Fan SPEED=0
-    BEEP
-
-
-[gcode_macro MOTOR_OFF]
-gcode:
-  M18
-
-[gcode_macro M81_Power_Off]
-gcode:
-  SET_PIN PIN=POWER_OFF VALUE=1
-
-[output_pin POWER_OFF]
-pin: !PE9
-shutdown_value: 1
-
-
-#[gcode_shell_command backup_cfg]
-#command: sh /home/vitaliy/klipper_config/autocommit.sh
-#timeout: 30.0
-#verbose: True
-
-[gcode_macro BACKUP_CFG]
-gcode:
-    RUN_SHELL_COMMAND CMD=backup_cfg
