feat: add nozzle cleaner script and beep when filament runout

--- a/klipper_config/macros.cfg
+++ b/klipper_config/macros.cfg
@@ -2,22 +2,22 @@
 gcode:
     {action_call_remote_method("shutdown_machine")}
 
-# [gcode_macro CLEAN_NOZZLE]
-# gcode:
-#    G1 X1 Y20 F10000
-#    G1 X1 Y130 F10000
-#    G1 X1 Y70 F10000
-#    G1 X1 Y130 F10000
-#    G1 X1 Y70 F10000
-#    G1 X1 Y130 F10000
-#    G1 X1 Y20 F10000
+[gcode_macro CLEAN_NOZZLE]
+gcode:
+   G1 X1 Y20 F10000
+   G1 X1 Y130 F10000
+   G1 X1 Y70 F10000
+   G1 X1 Y130 F10000
+   G1 X1 Y70 F10000
+   G1 X1 Y130 F10000
+   G1 X1 Y20 F10000
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
 gcode:
     ##### set defaults #####
     {% set x = params.X|default(10) %}       #edit to your park position
-    {% set y = params.Y|default(170) %}      #edit to your park position
+    {% set y = params.Y|default(200) %}      #edit to your park position
     {% set z = params.Z|default(20)|float %} #edit to your park position
     {% set e = params.E|default(1) %}        #edit to your retract length
     ##### calculate safe lift position #####
@@ -60,13 +60,55 @@ gcode:
     G91
     G1 Z5
     G90
-    G1 X5 Y105
+    G1 X5 Y205
     M84
 
 [gcode_macro PID_E]
 gcode:
-  {% set T = params.T|default(240) %}
+  {% set T = params.T|default(230) %}
   PID_CALIBRATE HEATER=extruder TARGET={T}
 
 [gcode_macro PID_B]
+gcode:
+  {% set T = params.T|default(80) %}
+  PID_CALIBRATE HEATER=heater_bed TARGET={T}
 
+[gcode_macro END_PRINT]
+gcode:
+    M140 S0
+    M104 S0
+    G91
+    G1 Z10 F3000
+    G90
+    G1  E-3 F300
+    G1 X10 Y200 F3000
+    M84
+    M106 S200
+    SET_FAN_SPEED FAN=Camera_Fan SPEED=1
+    G4 P300000
+    M106 S0
+    SET_FAN_SPEED FAN=Camera_Fan SPEED=0
+    BEEP
+
+
+[gcode_macro MOTOR_OFF]
+gcode:
+  M18
+
+[gcode_macro M81_Power_Off]
+gcode:
+  SET_PIN PIN=POWER_OFF VALUE=1
+
+[output_pin POWER_OFF]
+pin: !PE9
+shutdown_value: 1
+
+
+#[gcode_shell_command backup_cfg]
+#command: sh /home/vitaliy/klipper_config/autocommit.sh
+#timeout: 30.0
+#verbose: True
+
+[gcode_macro BACKUP_CFG]
+gcode:
+    RUN_SHELL_COMMAND CMD=backup_cfg
