--- a/klipper_config/extruder.cfg
+++ b/klipper_config/extruder.cfg
@@ -4,7 +4,8 @@ dir_pin: PD3
 enable_pin: !PB3
 microsteps: 16
 #rotation_distance: 4.877 #for oxy
-rotation_distance: 7.742 #my stock
+# rotation_distance: 15.632 #for stock
+rotation_distance: 7.742 #mine
 max_extrude_only_distance: 1400.0
 nozzle_diameter: 0.600
 filament_diameter: 1.750
@@ -22,14 +23,16 @@ pressure_advance_smooth_time = 0.040
 hysteresis: 10
 max_error: 120
 heating_gain: 2
-check_gain_time: 60 
+check_gain_time: 60
 
 [firmware_retraction]
-retract_length: 0.8
-retract_speed: 40
+retract_length: 0.7
+retract_speed: 30
 unretract_extra_length: 0
-unretract_speed: 40
+unretract_speed: 30
 
 [filament_switch_sensor filament_detection]
 pause_on_runout: True
 switch_pin: PA4
+runout_gcode:
+    BEEP
