--- a/klipper_config/extruder.cfg
+++ b/klipper_config/extruder.cfg
@@ -12,7 +12,8 @@ filament_diameter: 1.750
 heater_pin: PE5
 smooth_time: 2
 max_power: 1.0
-sensor_type: EPCOS 100K B57560G104F
+#sensor_type: EPCOS 100K B57560G104F
+sensor_type: NTC 100K beta 3950
 sensor_pin: PC1
 min_temp: 2
 max_temp: 260
@@ -23,7 +24,7 @@ pressure_advance_smooth_time = 0.040
 hysteresis: 10
 max_error: 120
 heating_gain: 2
-check_gain_time: 60
+check_gain_time: 60 
 
 [firmware_retraction]
 retract_length: 0.7
