--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -28,17 +28,12 @@ max_temp: 100
 path: ~/printer_data/gcodes
 
 ########## input shaper Part uncomment then need #########
-#[input_shaper]
-#shaper_freq_x: 39.4
-#shaper_type_x: mzv
-#shaper_freq_y: 39.4
-#shaper_type_y: mzv
 
 [input_shaper]
-shaper_type_x = ei
-shaper_freq_x = 55
-shaper_type_y = 2hump_ei
-shaper_freq_y = 55
+shaper_freq_x: 39.4
+shaper_type_x: mzv
+shaper_freq_y: 39.4
+shaper_type_y: mzv
 
 #[idle_timeout]
 #timeout: 1200
@@ -66,15 +61,15 @@ shaper_freq_y = 55
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 14.698
-#*# pid_ki = 0.544
-#*# pid_kd = 99.212
+#*# pid_kp = 18.531
+#*# pid_ki = 0.818
+#*# pid_kd = 104.932
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 70.222
-#*# pid_ki = 2.177
-#*# pid_kd = 566.169
+#*# pid_kp = 69.469
+#*# pid_ki = 1.703
+#*# pid_kd = 708.585
 #*#
 #*# [stepper_z]
-#*# position_endstop = -0.350
+#*# position_endstop = -0.270
