feat: sends 300mm of filament after runout

--- a/klipper_config/extruder.cfg
+++ b/klipper_config/extruder.cfg
@@ -33,7 +33,9 @@ unretract_extra_length: 0
 unretract_speed: 30
 
 [filament_switch_sensor filament_detection]
-pause_on_runout: True
+pause_on_runout: False
 switch_pin: PA4
+event_delay: 3.0
 runout_gcode:
+    F_CONSUMED
     BEEP
