feat: add filament runout macros

--- a/klipper_config/extruder.cfg
+++ b/klipper_config/extruder.cfg
@@ -33,6 +33,7 @@ unretract_extra_length: 0
 unretract_speed: 30
 
 [filament_switch_sensor filament_detection]
+pause_delay: 15
 pause_on_runout: False
 switch_pin: PA4
 event_delay: 3.0
