--- a/klipper_config/macros.cfg
+++ b/klipper_config/macros.cfg
@@ -90,6 +90,65 @@ gcode:
     SET_FAN_SPEED FAN=Camera_Fan SPEED=0
     BEEP
 
+# LOW_TEMP_CHECK checks if there is a setpoint for the  extruder. Untested! 
+# - If this setpoint is reached, continue. 
+# - If not, heat to setpoint.
+# - If no setpoint, heat to parameter T (default@200)
+[gcode_macro LOW_TEMP_CHECK]
+# default_parameter_T: 230
+gcode: 
+  {% set T = params.T|default(230) %}
+    {% if printer.extruder.target != 0 %} # if there is a setpoint for extruder
+        {% if printer.extruder.temperature < printer.extruder.target %} # if not reached, heat
+            M118 Heating from {printer.extruder.temperature} to {printer.extruder.target}.
+            M109 S{printer.extruder.target|float} 
+        {% endif %}
+    {% else %} # if no setpoint for extruder
+        {% if printer.extruder.target < T %}  # heat to T.
+            M118 No setpoint, heating to {T}.
+            M109 S{T}
+        {% endif %}
+    {% endif %}
+
+# filament change 
+[gcode_macro M600]
+gcode:
+    # M117 Filament Change
+    M118 Filament Change
+    SAVE_GCODE_STATE NAME=filament_change
+    PAUSE
+    LOW_TEMP_CHECK
+    G91 # relative
+    G1 E-1 F300 # retract 1
+    M125 # park
+    M702 # unload
+
+    # M117 New filament
+    M118 New filament
+    COUNTDOWN TIME=25 MSG="Switch"
+    M701
+    COUNTDOWN TIME=10 MSG="Clean"
+    RESUME
+    # M117 Resuming
+    M118 Resuming
+    RESTORE_GCODE_STATE NAME=filament_change
+    # M117 Printing..
+    M118 Printing..
+
+[gcode_macro COUNTDOWN]
+# default_parameter_MSG: "Time: "
+# default_parameter_TIME: 10
+gcode: 
+  {% set MSG = 'Time: ' %}
+  {% set TIME = 10 %}
+  # countdown 
+  {% for s in range(TIME|int, 0, -1) %}
+      # dwell 1 second
+      G4 P1000
+      # echo
+      # M117 {params.MSG} {s}s
+      M118 {params.MSG} {s}s
+  {% endfor %}
 
 [gcode_macro MOTOR_OFF]
 gcode:
@@ -103,7 +162,6 @@ gcode:
 pin: !PE9
 shutdown_value: 1
 
-
 #[gcode_shell_command backup_cfg]
 #command: sh /home/vitaliy/klipper_config/autocommit.sh
 #timeout: 30.0
@@ -113,24 +171,50 @@ shutdown_value: 1
 gcode:
     RUN_SHELL_COMMAND CMD=backup_cfg
 
+# load filament
+[gcode_macro M701]
+gcode:
+    SAVE_GCODE_STATE NAME=loading_filament
+    M117 Loading Filament
+    M83
+    G92 E0.0
+    LOW_TEMP_CHECK
+    G1 E20 F6000  # length of bowden tube till cold-end (~420mm) 
+    G92 E0.0
+    RESTORE_GCODE_STATE NAME=loading_filament
+
+# unload filament
+[gcode_macro M702]
+gcode:
+    SAVE_GCODE_STATE NAME=unloading_filament
+    M125 # park
+    # M117 Unloading Filament 
+    LOW_TEMP_CHECK
+    G91 # set relative
+    G1 E10 F100 
+    G92 E0.0
+    G1 E-15 F6000 # the E is the length of the bowden tube (420mm) + 100 mm. changed to 15!
+    G92 E0.0
+    RESTORE_GCODE_STATE NAME=unloading_filament
+
 [gcode_macro F_CONSUMED]
 variable_filament_consumed: 0
-variable_filament_lenght: 300   # length between the sensor and extruder
+variable_filament_lenght: 250   # length between the sensor and extruder
 gcode:
-# save current filament consumption
-SET_GCODE_VARIABLE MACRO=F_CONSUMED VARIABLE=filament_consumed VALUE={printer.print_stats.filament_used}
-# start checking filament consumption
-UPDATE_DELAYED_GCODE ID=DELAY_M600 DURATION=1
+  # save current filament consumption
+  SET_GCODE_VARIABLE MACRO=F_CONSUMED VARIABLE=filament_consumed VALUE={printer.print_stats.filament_used}
+  # start checking filament consumption
+  UPDATE_DELAYED_GCODE ID=DELAY_M600 DURATION=1
 
 [delayed_gcode DELAY_M600]
 gcode:
-# use set for easier reading
-{% set consumed=printer["gcode_macro F_CONSUMED"].filament_consumed %}
-{% set length=printer["gcode_macro F_CONSUMED"].filament_lenght %}
-# check if predetermine length is reached
-{% if printer.print_stats.filament_used|float <= (consumed|float + length|float) %}
-# start looping this script every second
-UPDATE_DELAYED_GCODE ID=DELAY_M600 DURATION=1
-{% else %}
-M600
-{% endif %}
+  # use set for easier reading
+  {% set consumed=printer["gcode_macro F_CONSUMED"].filament_consumed %}
+  {% set length=printer["gcode_macro F_CONSUMED"].filament_lenght %}
+  # check if predetermine length is reached
+  {% if printer.print_stats.filament_used|float <= (consumed|float + length|float) %}
+  # start looping this script every second
+    UPDATE_DELAYED_GCODE ID=DELAY_M600 DURATION=1
+  {% else %}
+    M600
+  {% endif %}
