--- a/klipper_config/extruder.cfg
+++ b/klipper_config/extruder.cfg
@@ -13,7 +13,7 @@ heater_pin: PE5
 smooth_time: 2
 max_power: 1.0
 #sensor_type: EPCOS 100K B57560G104F
-sensor_type: NTC 100K beta 3950
+sensor_type: Generic 3950
 sensor_pin: PC1
 min_temp: 2
 max_temp: 260
